# starlink-manager

./: DEVELOPMENT.md  README.md  doover_config.json  pyproject.toml
simulators/: docker-compose.yml
simulators/sample/: main.py  pyproject.toml
src/app_template/: app_config.py
src/starlink_manager/: __init__.py  app_config.py  app_state.py  app_tags.py  app_ui.py  application.py  starlink.py
tests/: test_imports.py
